tests/lime/fail/tokens/macro_first/byte_255.wsa
macro ÿ [push 255] ÿ
